<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".bebidas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/menssagebebida"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="544dp"
        android:src="@drawable/co" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="594dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/coca"
        android:textSize="20dp" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="544dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cocaprecio"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="430dp"
        android:src="@drawable/sprite" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="481dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/bebida2"
        android:textSize="20dp" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="431dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/spriteprecio"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="323dp"
        android:src="@drawable/fanta" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="373dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/fanta"
        android:textSize="20dp" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="322dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/fantaprecio"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="296dp"
        android:gravity="center"
        android:text="@string/textbebida"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editnamebebida"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="261dp"
        android:layout_toStartOf="@+id/editpreciobebida"
        android:background="@color/white"
        android:hint="@string/namebebida" />

    <EditText
        android:id="@+id/editpreciobebida"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="262dp"
        android:background="@color/white"
        android:hint="@string/precio" />

    <Button
        android:id="@+id/buttonnext2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/animbutton"
        android:text="@string/finish"
        android:textColor="#000000" />

    <Button
        android:id="@+id/buttonback2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="182dp"
        android:layout_toStartOf="@+id/buttonnext2"
        android:background="@drawable/animbutton"
        android:onClick="backon"
        android:text="@string/back"
        android:textColor="#000000" />

</RelativeLayout>